@@ -7,7 +7,7 @@ import java.util.concurrent.Executors;
 //TIP To <b>Run</b> code, press <shortcut actionId="Run"/> or
 // click the <icon src="AllIcons.Actions.Execute"/> icon in the gutter.
 public class Main {
-    private static final int NUMBER_OF_TASKS = 1000;
+    private static final int NUMBER_OF_TASKS = 3000;
 
     public static void main(String[] args) {
         Scanner s = new Scanner(System.in);
@@ -22,7 +22,10 @@ public class Main {
     }
 
     private static void performTasks() {
-        try (ExecutorService executorService = Executors.newCachedThreadPool()) {
+        // Replaced by virtual thread executor: 1270 - 1610 ms as average for 3000 tasks
+        // try (ExecutorService executorService = Executors.newCachedThreadPool()) {
+        // 1132 ms - 1300 ms as average for 3000 tasks
+         try(ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor()){
             for (int i = 0; i < NUMBER_OF_TASKS; i++) {
                 executorService.submit(Main::blockingIoOperation);
             }
